[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main_stage.gd" type="Script" id=1]
[ext_resource path="res://scripts/camera.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemy_spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/stars.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ship.tscn" type="PackedScene" id=5]

[node name="world" type="Node"]
script = ExtResource( 1 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 2 )

[node name="enemy_spawner" parent="." instance=ExtResource( 3 )]

[node name="stars" parent="." instance=ExtResource( 4 )]

[node name="ship" parent="." instance=ExtResource( 5 )]
[connection signal="enemy_explode" from="enemy_spawner" to="." method="_on_enemy_spawner_enemy_explode"]
[connection signal="enemy_get_hit" from="enemy_spawner" to="." method="_on_enemy_spawner_enemy_get_hit"]
[connection signal="enemy_shoot" from="enemy_spawner" to="." method="_on_enemy_spawner_enemy_shoot"]
[connection signal="explode" from="ship" to="." method="_on_ship_explode"]
[connection signal="get_hit" from="ship" to="." method="_on_ship_get_hit"]
[connection signal="shoot" from="ship" to="." method="_on_ship_shoot"]
